<resources>
    <string name="app_name">Meetup Marker</string>
    <string name="title_activity_events">Events</string>
    <string name="title_profile">Profile</string>
    <string name="title_map">Map</string>
    <string name="title_add_event">Event</string>
    <string name="facebook_app_id">160914118040240</string>
    <string name="facebook_login_protocol_scheme">fb160914118040240</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="description">Description</string>
    <string name="done">Done</string>
    <string name="log_out">Log out</string>
    <string name="google_maps_API_key">AIzaSyDzOtHMMwSVLDtuCdC2gbG869_zRmJ3JAk</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_make_event">makeEvent</string>
    <string name="type">Event Type</string>
    <string name="number"># of People</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="basketball">Basketball</string>
</resources>
